<resources>
    <string name="app_name">ADNP7_Capstone Project</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="noAppointments_Widget">Oops It Seems There\'s No Appointmets Today !</string>
    <string name="message_token_format" translatable="false">InstanceID Token: %s</string>
    <string name="need_location_permission_message">App has no Permission To Get Location</string>
    <string name="setup_geofences">Setup Geofences</string>
    <string name="leaving_time">leaving time</string>
    <string name="leaving_location">leaving location</string>
    <string name="final_travel_location">final travel location</string>
    <string name="driver_name">driver name</string>
    <string name="driver_phone_number">driver phone number</string>
    <string name="call_driver">call driver</string>
    <string name="rate_the_driver">rate the driver</string>
    <string name="coordinates">coordinates</string>
    <string name="number_of_passengers">number of passengers</string>
    <string name="rating_bar_text">How You Found My Driving ?</string>
    <string name="time">11:54 AM</string>
    <string name="date_home">14 NOV, 2018</string>
    <string name="iv_logo_name_login">iv_logo_name_login</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account ? Create One</string>
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="time_widget">time_widget</string>
    <string name="date_widget">date widget</string>
    <string name="palces_error_msg">Oops It Seems There is No places !</string>
    <string name="appointment_marker">appointment marker</string>
    <string name="view_more_details">view more details</string>
    <string name="more">More</string>
    <string name="marker_text_detail_activity">Marker in Sydney</string>
    <string name="google_play_not_available_err_msg">GooglePlayServices Not Available [%s]</string>
    <string name="place_picker_exception_err_msg">PlacePicker Exception: %s</string>
    <string name="toolbar_title">My Places</string>
    <string name="item_deleted_toast_msg">Item Deleted</string>

</resources>
