<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/widget_margin">


    <ImageView
        android:contentDescription="@string/time_widget"
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_access_time_black_24dp"
        android:layout_alignParentLeft="true" />

    <ImageView
        android:contentDescription="@string/date_widget"
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@+id/textView4"
        android:layout_toLeftOf="@+id/textView4"
        android:src="@drawable/ic_date_range_black_24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="12:00 AM" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="14, NOV" />

    <ListView
        android:id="@+id/lv_appointemts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/noAppointments_Widget"
        android:textAllCaps="false"
        android:textColor="@color/Tomato"
        android:textSize="28sp"/>
</RelativeLayout>