<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/backgroundColor"
    xmlns:tools="http://schemas.android.com/tools">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/appointment_marker"
                android:id="@+id/iv_circle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/solid_circle_blue"
                />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="12dp"
                android:layout_height="50dp"
                android:background="@color/LightSlateGray"
                android:layout_marginStart="12dp" />
        </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="07:00 AM - Bus Station" />

        <ImageView
            android:contentDescription="@string/view_more_details"
            android:id="@+id/iv_arrow_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_appointment"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/ic_arrow_forward_black_24dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_more"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tv_appointment"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/more"
            android:textColor="@color/LightSlateGray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_arrow_more"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_appointment">

            <ImageView
                android:contentDescription="@string/driver_name"
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_airline_seat_recline_normal_black_24dp" />

            <TextView
                android:id="@+id/tv_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginLeft="4dp"
                tools:text="Abed Jaba"
                android:layout_marginStart="4dp" />

            <ImageView
                android:contentDescription="@string/final_travel_location"
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:src="@drawable/ic_airplanemode_active_black_24dp"
                android:layout_marginStart="24dp" />

            <TextView
                android:id="@+id/tv_wjha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginLeft="4dp"
                android:textSize="14sp"
                tools:text="Jenin - Nablus"
                android:layout_marginStart="4dp" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    </LinearLayout>
