<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/backgroundColor"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:contentDescription="@string/appointment_marker"
            android:id="@+id/iv_circle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/solid_circle_blue"
            />

        <LinearLayout
            android:layout_width="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="12dp"
            android:layout_height="50dp"
            android:background="@color/LightSlateGray"
            android:layout_marginStart="12dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        tools:text="07:00 AM - Bus Station" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_appointment"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/driver_name"
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_airline_seat_recline_normal_black_24dp" />

        <TextView
            android:id="@+id/tv_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Abed Jaba"
            android:layout_marginStart="4dp" />

        <ImageView
            android:contentDescription="@string/final_travel_location"
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:src="@drawable/ic_airplanemode_active_black_24dp"
            android:layout_marginStart="24dp" />

        <TextView
            android:id="@+id/tv_wjha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="Jenin - Nablus"
            android:layout_marginStart="4dp" />
    </LinearLayout>
</RelativeLayout>